# finops-watchdog

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_collector.py  test_detector.py
.github/workflows/: ci.yml  test.yml
examples/: README.md  cost-timeseries-sample.csv  sample_cost_data.csv
examples/demo-lite/: overview.csv  services.csv
finops_watchdog/: alerter.py  data_collector.py  detector.py  main.py
finops_watchdog/analysis/: __init__.py  classifier.py
finops_watchdog/baselines/: window.py
finops_watchdog/ingest/: __init__.py  loader.py
tests/: test_basic.py  test_detect_cli.py
tests/fixtures/: missing_column.csv  multi_group.csv  no_anomaly.csv  non_numeric.csv  simple_spike.csv
