[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-watchdog"
version = "0.1.0"
description = "AWS cost anomaly detection and alerting for FinOps teams"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Diana", email = "your.email@example.com"},
]
keywords = ["aws", "finops", "cost-anomaly", "cloud", "monitoring", "alerts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
]

[project.scripts]
watchdog = "finops_watchdog.main:cli"
finops-watchdog = "finops_watchdog.main:cli"

[project.urls]
Homepage = "https://github.com/dianuhs/finops-watchdog"
Repository = "https://github.com/dianuhs/finops-watchdog.git"
"Bug Tracker" = "https://github.com/dianuhs/finops-watchdog/issues"