[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-watchdog"
version = "0.1.0"
description = "CSV-based cost anomaly detection CLI for FinOps teams"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Diana", email = "your.email@example.com"},
]
keywords = ["finops", "cost-anomaly", "csv", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1.7",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
watchdog = "finops_watchdog.main:cli"
finops-watchdog = "finops_watchdog.main:cli"

[project.urls]
Homepage = "https://github.com/dianuhs/finops-watchdog"
Repository = "https://github.com/dianuhs/finops-watchdog.git"
"Bug Tracker" = "https://github.com/dianuhs/finops-watchdog/issues"
